# verievals

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/actions/verify/: action.yml
.github/workflows/: ci.yml  pages.yml  publish.yml  verify-demo.yml
benchmarks/arithmetic/: benchmark.yaml  tasks.jsonl
benchmarks/capitals/: benchmark.yaml  tasks.jsonl
benchmarks/gsm8k/: benchmark.yaml  tasks.jsonl
benchmarks/gsm8k-full/: NOTICE  benchmark.yaml  tasks.jsonl
docs/: INTEGRATION.md  RELEASING.md  architecture.md  cli.md  github-action.md  gsm8k-mvp.md  record-format.md  sdk.md  threat-model.md  trust-score.md  verification.md
examples/: README.md  custom_model.py  run_arithmetic.py  run_gsm8k.py
examples/fixtures/: arithmetic_solver.json  gsm8k_gemma3_1b.json
scripts/: fetch_gsm8k.py
space/: README.md  app.py  requirements.txt
src/verievals/: __init__.py
src/verievals/benchmarks/: __init__.py  base.py  loader.py
src/verievals/cli/: __init__.py  keys.py  main.py
src/verievals/crypto/: __init__.py  canonical.py  hashing.py  merkle.py  signing.py
src/verievals/leaderboard/: __init__.py  _html.py  builder.py  trust.py
src/verievals/ledger/: __init__.py  merkle_log.py  verifier.py
src/verievals/models/: __init__.py  anthropic_adapter.py  base.py  echo.py  fixture.py  ollama_adapter.py  openai_adapter.py  registry.py
tests/: conftest.py  test_integration_example.py
tests/benchmarks/: test_base.py  test_capitals.py  test_gsm8k.py  test_gsm8k_fixture.py  test_gsm8k_full.py  test_loader.py
tests/cli/: test_keys.py  test_leaderboard_out.py  test_main.py  test_trust_cli.py
tests/crypto/: test_canonical.py  test_hashing.py  test_merkle.py  test_signing.py
tests/leaderboard/: test_builder.py  test_html.py  test_trust.py
tests/ledger/: conftest.py  test_merkle_log.py  test_verifier.py
tests/models/: test_anthropic_adapter.py  test_echo.py  test_fixture.py  test_ollama_adapter.py  test_openai_adapter.py  test_registry.py
tests/records/: test_schema.py  test_store.py
tests/runner/: test_engine.py
tests/scoring/: test_exact_match.py  test_gsm8k.py  test_numeric.py  test_regex_match.py  test_registry.py
tests/sdk/: test_recorder.py
(+16 files in other folders)
